# atta

./: .gitignore  Clone-detection-POJ-104  README.md  analysis.py  attn_test.py  find_tokens.py  get_model.py  knn_eval.py  lm.py  main.py  notes.md  pyproject.toml  test.txt  test_vllm_api.py  todo.md
prompts/: add_nested_tuples.txt  bin_tree.txt  chill_index.txt  combinations.txt  combinations_hs.txt  count_reflexive_pairs.txt  count_symmetric_pairs.txt  dijkstra.txt  dijkstra2.txt  duplicate.txt  encrypt.txt  encrypt_types.txt  frequency.txt  gcd.txt  gcd2.txt  hash.txt  mha.txt  mha_types.txt  monotonic.txt  mst.txt  open_ports.txt  permutations_hs.txt  scc.txt  scc_types.txt  sort.txt  tetrahedral.txt  unet.txt  unet_types.txt
